--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -2,6 +2,13 @@
 <p><%= @restaurant.address %></p>
 <p><%= @restaurant.phone_number %></p>
 <p><%= @restaurant.category %></p>
-<p><%= @restaurant.reviews %></p>
-<%= link_to "Write a new review for this restaurant", new_restaurant_review_path  %>
-<%= link_to "Back to list", restaurants_path  %>
+<div>
+  <ul>
+    <% @restaurant.reviews.each do |review| %>
+      <li><%= review.content %> <%= "*" * review.rating %></li>
+    <% end %>
+  </ul>
+</div>
+
+<p><%= link_to "Write a new review for this restaurant", new_restaurant_review_path(@restaurant)  %></p>
+<p><%= link_to "Back to list", restaurants_path  %></p>
