--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -3,4 +3,4 @@
   <p><%= link_to restaurant[:name], restaurant_path(restaurant) %></p>
 <% end %>
 
-<%= link_to "Add a new restaurant", new_restaurant_path  %>
+<%= link_to "Add a new restaurant", new_restaurant_path, class: "btn btn-primary" %>
