--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -10,5 +10,5 @@
   </ul>
 </div>
 
-<p><%= link_to "Write a new review for this restaurant", new_restaurant_review_path(@restaurant)  %></p>
-<p><%= link_to "Back to list", restaurants_path  %></p>
+<p><%= link_to "Write a new review for this restaurant", new_restaurant_review_path(@restaurant), class: "btn btn-primary" %></p>
+<p><%= link_to "Back to list", restaurants_path, class: "btn btn-primary" %></p>
